fix: last small details